# ds_code_challenge

./: .env.example  LICENSE  Makefile  README.md  environment.yml  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
ds_code_challenge/: __init__.py  config.py  dataset.py  features.py  plots.py
ds_code_challenge/data/: __init__.py  eda.py  image_loader.py  s3_loader.py  transform.py
ds_code_challenge/modeling/: __init__.py  anomaly_detection.py  pool_detector.py  predict.py  predict_pool_detector.py  train.py  train_pool_detector.py
ds_code_challenge/utils/: __init__.py  helpers.py
notebooks/: 0.0-main-workflow.ipynb  0.1-eda.ipynb  0.2-swimming-pool-detection.ipynb
