[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "dsu_code_challenge"
version = "0.0.1"
description = "DS coding challenge for CoCT"
authors = [
  { name = "Wiebke Hutiri" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.13.0"


[tool.ruff]
line-length = 99
src = ["dsu_code_challenge"]
include = ["pyproject.toml", "dsu_code_challenge/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["dsu_code_challenge"]
force-sort-within-sections = true

